--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Why Zack Polanski and the Greens MATTER</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Love Marriage or Arranged Marriage, Which is Better ? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Securing your trading profit!!!</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Kashi's Hidden Secrets | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -306,9 +306,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=fUZKStnDw2o" target="_blank">
-                    <img src="https://i.ytimg.com/vi/fUZKStnDw2o/mqdefault.jpg" alt="SIDEMEN GUESS THE SOUND">
+                    <img src="https://i.ytimg.com/vi/fUZKStnDw2o/mqdefault.jpg" alt="SIDEMEN MAKE THE SOUND: BRAINROT EDITION">
                     <div class="video-info">
-                        <h3>SIDEMEN GUESS THE SOUND</h3>
+                        <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">21 hours ago</div>
                     </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>NIGHTMARE ROOMATES 3</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -486,7 +486,7 @@
                     <div class="video-info">
                         <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -651,7 +651,7 @@
                     <div class="video-info">
                         <h3>He forced me to Put pineapple on pizza!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1047,7 +1047,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5763,7 +5763,7 @@
                         <div class="video-info">
                             <h3>Why Zack Polanski and the Greens MATTER</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>Securing your trading profit!!!</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5818,7 +5818,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Love Marriage or Arranged Marriage, Which is Better ? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>Kashi's Hidden Secrets | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Your Ability to Love is Unlimited | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9402,7 +9402,7 @@
                         <div class="video-info">
                             <h3>He forced me to Put pineapple on pizza!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10257,9 +10257,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=fUZKStnDw2o" target="_blank">
-                        <img src="https://i.ytimg.com/vi/fUZKStnDw2o/mqdefault.jpg" alt="SIDEMEN GUESS THE SOUND">
+                        <img src="https://i.ytimg.com/vi/fUZKStnDw2o/mqdefault.jpg" alt="SIDEMEN MAKE THE SOUND: BRAINROT EDITION">
                         <div class="video-info">
-                            <h3>SIDEMEN GUESS THE SOUND</h3>
+                            <h3>SIDEMEN MAKE THE SOUND: BRAINROT EDITION</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">21 hours ago</div>
                         </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>NIGHTMARE ROOMATES 3</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10316,7 +10316,7 @@
                         <div class="video-info">
                             <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10492,7 +10492,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GARTIC PHONE IN REAL LIFE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
